--- a/static/css/wordanalysis.css
+++ b/static/css/wordanalysis.css
@@ -1,69 +1,107 @@
-.card{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	margin: 10px auto;
-	background: lightblue;
-	padding: 1em 2em;
-	border-radius: 5px;
-}
-.container{
-	margin: 1em auto;
-	padding: 2em 0.5em;
-	border-radius: 1em;
-	background: skyblue;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-.datetime-table{
-	max-width: 50rem;
-	margin: 2rem auto;
-	text-align: center;
-}
-.subcontainer{
-	background: lightblue;
-	padding: 1em 2em;
-	
-}
 body{
-	min-width: 485px;
-	text-align: center;
+	grid-template-rows: 0.1fr 5fr 0.1fr;
 }
-table, th, td, tr{
-	border: 1px solid transparent;
-	color: black;
+div#datetime-grid-container {
+    display: grid;
+    grid-template-areas: "datetime-header" "datetime-body";
+    grid-row-gap: 1vw;
+    width: 50vw;
+    padding: 2vw 0;
+
 }
-img {
-	max-width: 100%;
-	display: block;
-	height: auto ;
-	margin: auto !important;
+
+div#datetime-grid-body {
+    grid-area: datetime-body;
+    display: flex;
+    justify-content: space-evenly;
 }
-th {
-	padding: 1em 0.5em !important;
-	align-self: center !important;
-	display: table-cell !important;
-	vertical-align: middle !important;
+
+div#datetime-grid-header {
+    grid-area: datetime-header;
+    display: flex;
+    justify-content: space-evenly;
+    font-weight: bold;
+    font-size: 1.1em;
 }
-@media (max-width: 512px){
-	td{
-		font-size: 0.7em !important;
+
+div.datetime-grid-item {
+    width: 10vw;
+    text-align: center;
+
+}
+
+div.analysis-section {
+    margin: 5vh auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+    -webkit-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
+    padding: 3vmin 5vmin;
+    width: 100%;
+}
+
+hr {
+    width: 100%;
+}
+
+.title {
+    font-size: medium;
+    font-weight: bolder;
+}
+
+li {
+    list-style-type: none;
+	margin-bottom: 1vmin;
+}
+
+
+@media (max-width: 940px) {
+    div#datetime-grid-container {
+        grid-template-areas: "datetime-header datetime-body";
+		width: 50vw;
+		padding: 0;
+    }
+
+    div#datetime-grid-body {
+        flex-direction: column;
+		width: 10vw;
+		font-size: 1em;
+    }
+
+    div#datetime-grid-header {
+        flex-direction: column;
+		width: 10vw;
+		font-size: 1em;
+    }
+	div.datetime-grid-item{
+		width: 20vw;
+		margin-bottom: 1vh;
 	}
 }
-li{
-	list-style: none;
-	border-bottom: 1px solid white !important;
-	border-left: 1px solid white !important;
-	border-right: 1px solid white !important;
-	padding: 5px 3px;
-}
-ul#lista-clasificadora>li:first-of-type{
-	border-top: 1px solid white;
-}
-ul{
-	margin-top: 10px;
-	text-align: start;
+@media (max-width: 500px) {
+    div#datetime-grid-container {
+        grid-template-areas: "datetime-header datetime-body";
+		width: 50vw;
+		padding: 0;
+    }
+
+    div#datetime-grid-body {
+        flex-direction: column;
+		width: 10vw;
+		font-size: 0.6em;
+    }
+
+    div#datetime-grid-header {
+        flex-direction: column;
+		width: 10vw;
+		font-size: 0.6em;
+    }
+	div.datetime-grid-item{
+		width: 20vw;
+		margin-bottom: 1vh;
+	}
 }
