--- a/templates/wordanalysis.html
+++ b/templates/wordanalysis.html
@@ -3,176 +3,156 @@
 {% extends "pivote-layout.html" %}
 
 {% block head %}
-{{ super() }}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/wordanalysis.css') }}">
-{#
-<script type="text/javascript">
-    let ObjetoQueVieneDesdeAPI = {{ clasificacionPalabras | safe }};
-    ObjetoQueVieneDesdeAPI.replace("'","");
-    clasificaciones_de_palabras = (JSON.parse(ObjetoQueVieneDesdeAPI));
+    {{ super() }}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/wordanalysis.css') }}">
 
-    let lista_de_clasificaciones = Object.keys(clasificaciones_de_palabras);
-    let contador = 0;
-    let lista = document.getElementById("lista-clasificadora");
-    console.log(lista);
-    for (let tipo_de_palabra in lista_de_clasificaciones){
-        let descripcion = tipo_de_palabra;
-        console.log(descripcion);
-        let cantidad = clasificaciones_de_palabras[tipo_de_palabra];
-        console.log(cantidad);
-        let item = document.createElement('div');
-        item.className = 'item_clasificacion_palabras';
-        item.innerHTML =
-        '<li>'  + '<b>' + descripcion + ': ' + '</b>' + cantidad +  '</li>';
-        lista.appendChild(item);
-        contador += 1;
-    }
-</script>
-#}
 
 {% endblock %}
 <!-- Navegación -->
 {% block nav %}
-{{ super() }}
+    {{ super() }}
 {% endblock %}
 
 {% block content %}
 
-<div class="jumbotron main-container">
-	<div class="header">
-		<h3>Análisis textual completo</h3>
-		<hr>
-	</div>
-	<!-- Datetime inicial + final -->
-	<div class="datetimes analysis-section container">
-		<div class="subcontainer container">
-		<h4 class="title">Rango horario de las respuestas</h4>
-		<hr style="border: 0.5px solid black; width: 100%;">
+    <div class="jumbotron main-container">
+        <div class="header">
+            <h3>Análisis textual completo</h3>
+            <hr>
+        </div>
+        <!-- Datetime inicial + final -->
+        <div class="datetimes analysis-section">
+            <h4 class="title">Rango horario de las respuestas</h4>
+            <hr>
+            <div id="datetime-grid-container">
+                <div id="datetime-grid-header">
+                    <div class="datetime-grid-item">Fecha inicial</div>
+                    <div class="datetime-grid-item">Hora inicial</div>
+                    <div class="datetime-grid-item">Fecha final</div>
+                    <div class="datetime-grid-item">Hora final</div>
+                </div>
+                <div id="datetime-grid-body">
+                    <div class="datetime-grid-item">{{ primeraFecha }}</div>
+                    <div class="datetime-grid-item">{{ primeraHora }}</div>
+                    <div class="datetime-grid-item">{{ ultimaFecha }}</div>
+                    <div class="datetime-grid-item">{{ ultimaHora }}</div>
+                </div>
+            </div>
+        </div>
+        <div class="most-active-day analysis-section">
+            <h6 class="title">Día más activo (Mayor cantidad de respuestas):</h6>
+            <hr>
+            <h5>{{ masmensajes }}</h5>
+            <h6>Cantidad de respuestas: {{ cantmasmensajes }} </h6>
+
+        </div>
 
 
-		<table class="table table-striped table-dark datetime-table" >
-			<thead>
-				<tr class="table-primary">
-					<th scope="col">#</th>
-					<th scope="col">Fecha inicial</th>
-					<th scope="col">Hora inicial</th>
-					<th scope="col">Fecha final</th>
-					<th scope="col">Hora final</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr class="table-info">
-					<th scope="row"><img  src="{{ url_for('static', filename='img/calendar.png') }}" alt=""></th>
-					<td>{{primeraFecha}}</td>
-					<td>{{primeraHora}}</td>
-					<td>{{ultimaFecha}}</td>
-					<td>{{ultimaHora}}</td>
-				</tr>
-			</tbody>
-		</table>
-		</div>
-	</div>
-
-	<div class="most-active-day analysis-section container">
-		<div class="subcontainer container">
-		<h5>Día más activo (Mayor cantidad de respuestas):</h5>
-		<hr style="border: 0.5px solid black; width: 100%;">
-		<h4>{{masmensajes}}</h4>
-		<h6>Cantidad de respuestas:</h6>
-		<h6>{{cantmasmensajes}}</h6>
-		</div>
-	</div>
+        <!-- Cantidad de mensajes en rangos horarios variables -->
+        <div class="time-ranges analysis-section  ">
+            <h4 class="title">Rangos horarios</h4>
+            <hr>
+            <figure>
+                <img src="{{ url_for('static', filename=barchart) }}"
+                     alt="time-ranges" width="400px">
+                <figcaption>
+                    Distribución de mensajes por momento del día
+                </figcaption>
+            </figure>
+        </div>
 
 
-	<!-- Cantidad de mensajes en rangos horarios variables -->
-	<div class="time-ranges analysis-section container">
-		<div class="subcontainer container">
-		<h4 class="title">Rangos horarios</h4>
-		<p>Distribución de mensajes por momento del día</p>
-		<hr style="border: 0.5px solid black; width: 100%;">
-		<img src="{{ url_for('static', filename=barchart) }}"
-			alt="time-ranges" width="400px">
-		</div>
-	</div>
+        <!-- Totalizators -->
+        <div class="totalizators analysis-section  ">
+            <h3 class="title">Totalizadores</h3>
+            <hr>
+            <div id="days-messages" class=" palette totalizator-palette">
+                <h6>Cantidad de días en los que se enviaron mensajes</h6>
+                <h3>{{ cantDiasRtas }}</h3>
+            </div>
+            <div id="amount-words-answers" class="palette totalizator-palette">
+                <h6>Cantidad de palabras en las respuestas</h6>
+                <h3>{{ cantPalabras }}</h3>
+            </div>
+            <div id="amount-letters" class="palette totalizator-palette">
+                <h6>Cantidad de letras en las respuestas</h6>
+                <h3>{{ cantLetras }}</h3>
+            </div>
+            <!-- <div class="amount-letters" class="palette totalizator-palette">
+                <h6>Cantidad de letras en las respustas</h6>
+                <h3>#</h3>
+            </div> -->
+        </div>
+        <!-- Averages -->
+        <div class="averages analysis-section  ">
+            <h3 class="title">Promedios</h3>
+            <hr>
+            <div class=" palette average-palette" id="words-average">
+                <h6>Cantidad de palabras promedio (por respuesta)</h6>
+                <h3>{{ promedioPalabrasPorRta }}</h3>
+            </div>
+            <div class=" palette average-palette" id="letters-average">
+                <h6>Cantidad de letras promedio (Por respuesta)</h6>
+                <h3>{{ promLetrasRta }}</h3>
+            </div>
+            <div class=" palette average-palette">
+                <h6>Cantidad de respuestas promedio (Por día)</h6>
+                <h3>{{ promRtaPorDia }}</h3>
+            </div>
+            <div class=" palette average-palette">
+                <h6>Cantidad de letras promedio (Por día)</h6>
+                <h3>{{ promedioLetrasPorDia }}</h3>
+            </div>
 
+        </div>
 
-	<!-- Totalizators -->
-	<div class="totalizators analysis-section container">
-		<h3>Totalizadores</h3>
-		<hr style="border: 0.5px solid black; width: 100%;">
-		<div id="days-messages" class=" card totalizator-card">
-			<h5>Cantidad de días en los que se enviaron mensajes</h5>
-			<h3>{{cantDiasRtas}}</h3>
-		</div>
-		<div id="amount-words-answers" class="card totalizator-card">
-			<h5>Cantidad de palabras en las respuestas</h5>
-			<h3>{{ cantPalabras  }}</h3>
-		</div>
-		<div id="amount-letters" class="card totalizator-card">
-			<h5>Cantidad de letras en las respuestas</h5>
-			<h3>{{ cantLetras }}</h3>
-		</div>
-		<!-- <div class="amount-letters" class="card totalizator-card">
-			<h5>Cantidad de letras en las respustas</h5>
-			<h3>#</h3>
-		</div> -->
-	</div>
-	<!-- Averages -->
-	<div class="averages analysis-section container">
-		<h3>Promedios</h3>
-		<hr style="border: 0.5px solid black; width: 100%;">
-		<div class=" card average-card" id="words-average">
-			<h5>Cantidad de palabras promedio (por respuesta)</h5>
-			<h3>{{ promedioPalabrasPorRta }}</h3>
-		</div>
-		<div class=" card average-card" id="letters-average">
-			<h5>Cantidad de letras promedio (Por respuesta)</h5>
-			<h3>{{ promLetrasRta }}</h3>
-		</div>
-		<div class=" card average-card">
-			<h5>Cantidad de respuestas promedio (Por día)</h5>
-			<h3>{{ promRtaPorDia }}</h3>
-		</div>
-		<div class=" card average-card">
-			<h5>Cantidad de letras promedio (Por día)</h5>
-			<h3>{{ promedioLetrasPorDia }}</h3>
-		</div>
+        <div class="analysis-section">
+            <h3 class="title">Clasificador de palabras</h3>
+            <hr>
+            <ul id="lista-clasificadora">
 
-	</div>
-
-    <div class="analysis-section container">
-        <h3>Clasificador de palabras</h3>
-        <hr style="border: 1px solid black; width:100% ">
-        <ul id="lista-clasificadora">
-
-        </ul>
+            </ul>
+        </div>
     </div>
-</div>
-<script type="text/javascript">
-    let ObjetoQueVieneDesdeAPI = {{ clasificacionPalabras | safe }};
-    ObjetoQueVieneDesdeAPI.replace("'","");
-    clasificaciones_de_palabras = (JSON.parse(ObjetoQueVieneDesdeAPI));
-    let lista_de_clasificaciones = Object.keys(clasificaciones_de_palabras);
-    let contador = 0;
-    let lista = document.getElementById("lista-clasificadora");
-    console.log(lista);
-    for (let tipo_de_palabra in lista_de_clasificaciones){
-        let descripcion = lista_de_clasificaciones[tipo_de_palabra];
-        console.log(descripcion);
-        let cantidad = clasificaciones_de_palabras[descripcion];
-        console.log(cantidad);
-        let item = document.createElement('li');
-        item.className = 'item_clasificacion_palabras';
-        item.innerHTML =
-        '<b>' + descripcion + ': ' + '</b>' + cantidad;
-        lista.appendChild(item);
-        contador += 1;
-    }
+    <script type="text/javascript">
+        let ObjetoQueVieneDesdeAPI = {{ clasificacionPalabras | safe }};
+        ObjetoQueVieneDesdeAPI.replace("'", "");
+        clasificaciones_de_palabras = (JSON.parse(ObjetoQueVieneDesdeAPI));
+        let lista_de_clasificaciones = Object.keys(clasificaciones_de_palabras);
+        let contador = 0;
+        let lista = document.getElementById("lista-clasificadora");
+        console.log(lista);
+        for (let tipo_de_palabra in lista_de_clasificaciones) {
+            let descripcion = lista_de_clasificaciones[tipo_de_palabra];
+            console.log(descripcion);
+            let cantidad = clasificaciones_de_palabras[descripcion];
+            console.log(cantidad);
+            let item = document.createElement('li');
+            item.className = 'item_clasificacion_palabras';
+            if (contador > 2){
+                item.innerHTML =
+                descripcion + ': ' + cantidad;
+                item.style.fontSize = "small";
+            }
+            else{
+                item.innerHTML =
+                 '<b>' + descripcion + ': ' + '</b>' + cantidad;
+            }
+            lista.appendChild(item);
+            contador += 1;
 
-</script>
+        }
+
+        function resaltar_clasificaciones() {
+            let x;
+            for (x = 0; x < 5; x=x+1) {
+                return '<b>' + lista[x].innerHTML + '</b>'
+            }
+        }
+    </script>
 {% endblock %}
 
 <!-- Footer -->
 {% block footer %}
-{{ super() }}
+    {{ super() }}
 {% endblock %}
